--- a/index.html
+++ b/index.html
@@ -5,276 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LENAJ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
-        
-        * {
-            font-family: 'Open Sans', sans-serif;
-        }
-
-        body {
-            background-image: url('./assets/images/LENAJ-clear-BG_white.jpg');
-            background-size: cover;
-            background-repeat: repeat;
-        }
-
-        .w-10 {
-            width: 10%;
-        }
-
-        .lenaj-logo {
-            width: 40%;
-            display: block;
-            margin: 50px auto;
-        }
-
-        .uc-logo {
-            width: 30px;
-        }
-
-        .fw-500 {
-            font-weight: 500;
-        }
-
-        .fw-600 {
-            font-weight: 600;
-        }
-
-        .fw-700 {
-            font-weight: 700;
-        }
-
-        .fw-800 {
-            font-weight: 800;
-        }
-
-        .text-golden {
-            color: #d2a300;
-        }
-
-        .phone-logo {
-            width: 25px;
-        }
-
-        .uc-text {
-            font-size: 35px;
-        }
-
-        .uc-text img {
-            margin-top: 20px;
-        }
-
-        .px-uc-text {
-            padding-left: 15px;
-            padding-right: 15px;
-        }
-
-        .contact-info-sm {
-            display: none;
-        }
-
-        .contact-info-lg {
-            display: block;
-        }
-
-        .contact-info-lg p {
-            font-size: 22px;
-        }
-
-        .wa-logo-sm, .ft-logo-sm {
-            display: none;
-        }
-
-        .text-insta-cap {
-            font-size: 18px;
-        }
-        a, a:visited, a:focus {
-            text-decoration: none;
-            color: inherit;
-        }
-        .address-sm {
-            display: none;
-        }
-        .address-lg {
-            display: block;
-        }
-        .address-lg .veteran-owned {
-            width: 200px;
-        }
-        .address-lg .pin-img {
-            width: 35px;
-        }
-        .address-lg .instagram-logo {
-            width: 40px;
-        }
-        .container-fluid {
-            padding: 50px;
-        }
-        .wa-ft-lg {
-            position: absolute;
-            top: 250px;
-            left: 100px;
-        }
-        .wa-ft-lg .wa-logo-lg, .wa-ft-lg .ft-logo-lg {
-            width: 75px;
-        }
-        .wa-ft-lg .wa-logo-lg {
-            margin-bottom: 40px;
-        }
-        .text-mail-1 {
-            padding-left: 19px;
-        }
-        .text-mail-3 {
-            padding-left: 59px;
-        }
-	.header-icons {
-	    margin-top: 10px;
-	    margin-bottom: 20px;
-	}
-
-	.veteran-owned {
-	    width: 100px;  /* Adjust as needed */
-	}
-
-	.p-address {
-	    margin: 0;
-	    padding: 0;
-	    font-size: 14px;  /* Adjust as needed */
-	}
-
-	.instagram-logo {
-	    width: 40px;  /* Adjust as needed */
-	}
-        @media only screen and (min-width: 768px) and (max-width: 1023px) {
-            .lenaj-logo {
-                width: 70%;
-            }
-            .uc-text {
-                font-size: 24px;
-            }
-            .wa-ft-lg {
-                position: absolute;
-                top: 250px;
-                left: 50px;
-            }
-            .wa-ft-lg .wa-logo-lg, .wa-ft-lg .ft-logo-lg {
-                width: 60px;
-            }
-            .contact-info-lg p {
-                font-size: 18px;
-            }
-            .address-lg .veteran-owned {
-                width: 175px;
-            }
-            .address-lg .pin-img {
-                width: 30px;
-            }
-            .address-lg .instagram-logo {
-                width: 35px;
-            }
-            .p-address {
-                font-size: 15px;
-                padding: 0;
-                margin: 0;
-            }
-            .text-insta-cap {
-                font-size: 17px;
-            }
-            .text-mail-1 {
-                padding-left: 16px;
-            }
-            .text-mail-3 {
-                padding-left: 49px;
-            }
-        }
-        @media only screen and (max-width: 767px) {
-            .container-fluid {
-                padding: 15px;
-            }
-            .lenaj-logo {
-                width: 90%;
-                margin: 50px auto 20px auto;
-            }
-            .uc-text-container {
-                padding-top: 15px;
-                padding-bottom: 15px;
-            }
-            .uc-logo {
-                width: 15px;
-            }
-            .uc-text {
-                font-size: 19px;
-            }
-            .uc-text img {
-                margin-top: 10px;
-            }
-            .px-uc-text {
-                padding-left: 8px;
-                padding-right: 8px;
-            }   
-            .contact-info-sm {
-                display: block;
-            }
-            .contact-info-sm p {
-                font-size: 18px;
-                text-align: right;
-                padding: 0;
-                margin: 0;
-            }
-            .phone-logo {
-                width: 20px;
-            }
-            .contact-info-lg {
-                display: none;
-            }
-            .tbl-contact-info {
-                width: 225px;
-                padding-top: 15px;
-                padding-bottom: 15px;
-            }
-            .wa-ft-sm {
-                padding-top: 15px;
-                padding-bottom: 15px;
-            }
-            .wa-logo-sm, .ft-logo-sm {
-                display: block;
-                width: 50px;
-            }
-            .address-sm {
-                display: block;
-            }
-            .text-insta-cap {
-                font-size: 18px;
-                margin: 0;
-            }
-            .text-insta-cap img {
-                width: 30px;
-            }
-            .veteran-owned {
-                display: block;
-                padding: 0;
-                margin: 15px auto 0 auto;
-                width: 175px;
-            }
-            .pin-img {
-                display: block;
-                padding: 0;
-                margin: 20px auto 0 auto;
-                width: 25px;
-            }
-            .p-address {
-                font-size: 14px;
-                padding: 0;
-                margin: 0;
-            }
-            .address-lg {
-                display: none;
-            }
-            .wa-ft-lg {
-                display: none;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -334,7 +65,7 @@
 			<img src="./assets/images/LENAJ-whatsApp-honeycomb_black-03.png" alt="whatsapp-black" class="wa-logo-lg">
             </div>
             <div>
-	        <a href="facetime:+19162202361">
+	        <a href="facetime://+19162202361">
                 <img src="./assets/images/LENAJ-faceTime-honeycomb_mustard-yellow-04.png" alt="facetime-logo" class="ft-logo-lg">
             </div>
         </div>
